# Calcolatrice_TCP-UDP

./: LICENSE  README.md
Test_Calcolatrice_TCP/Client/: Client.c  Client.h
Test_Calcolatrice_TCP/Server/: Calculator.c  Headers.h  Server.c  Server.h
Test_Calcolatrice_UDP/: CMakeLists.txt
Test_Calcolatrice_UDP/Client/: Client.c  Client.h  Headers.h
Test_Calcolatrice_UDP/Server/: Calculator.h  Headers.h  Server.c  Server.h
